--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-Name: Open Lab Notebook_Mass Lab
+name: T. Mass's Lab Notebook_Mass Lab
 
 # Short bio or description (displayed in the header)
-description: Open Lab Notebook of the Mass Lab
+description: PI
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: "https://avatars.githubusercontent.com/u/76209416?s=200&v=4"
+avatar: "https://avatars.githubusercontent.com/talimass"
 
 #
 # Flags below are optional
@@ -18,15 +18,15 @@ avatar: "https://avatars.githubusercontent.com/u/76209416?s=200&v=4"
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: tmass@univ.haifa.ac.il
   facebook:
   flickr:
-  github: /Mass-Lab
+  github: https://github.com/talimass
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/tali-mass-7333984b/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: MassTali
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,13 +41,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "https://github.com/Mass-Lab" 
+url: "http://talimass.github.io" 
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/Open_Lab_Notebook_Mass_Lab"
+baseurl: "/talimass_Lab_Notebook_Mass_Lab"
 
 #
 # !! You don't need to change any of the configuration flags below !!
